--- a/LesApp1/index.html
+++ b/LesApp1/index.html
@@ -7,10 +7,20 @@
     <title>Самостоятельная деятельность учащегося</title>
     <!-- Задание 2
     Сверстайте структуру HTML страницы по шаблону block в папке с домашним заданием. -->
+
+    <link rel="stylesheet" href="Resources/body_style.css">
 </head>
 
 <body>
-
+    <div id="id_all">
+        <div id="id_header">Шапка</div>
+        <div id="id_nav">Блок навигации</div>
+        <div id="id_main">
+            <div id="id_menu">Меню</div>
+            <div id="id_cont">Контент</div>
+        </div>
+        <div id="id_footer">Подвал сайта</div>
+    </div>
 </body>
 
 </html>
