Added info for 1-st task

--- a/LesApp0/index.html
+++ b/LesApp0/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h3>Розташуйте сторінку в браузері так щоб на ній не поміщалися всі параграфи, наприклад на половину екрану і натискайте кнопку</h3>
     <button>Change position</button>
     
     <div>
