finished corected 2-nd task

--- a/LesApp1/index.html
+++ b/LesApp1/index.html
@@ -13,13 +13,17 @@
 
 <body>
     <div id="id_all">
-        <div id="id_header">Шапка</div>
-        <div id="id_nav">Блок навигации</div>
+        <div id="id_header" class="class_add">Шапка</div>
+        <div id="id_navigation" class="class_add">Блок навигации</div>
         <div id="id_main">
-            <div id="id_menu">Меню</div>
-            <div id="id_cont">Контент</div>
+            <div id="id_menu_outer">
+                <div id="id_menu_iner" class="class_add">Меню</div>
+            </div>
+            <div id="id_content_outer">
+                <div id="id_content_iner" class="class_add">Контент</div>
+            </div>
         </div>
-        <div id="id_footer">Подвал сайта</div>
+        <div id="id_footer" class="class_add">Подвал сайта</div>
     </div>
 </body>
 
