--- a/LesApp2/index.html
+++ b/LesApp2/index.html
@@ -7,10 +7,29 @@
     <title>Самостоятельная деятельность учащегося</title>
     <!-- Задание 3
     Реализуйте разметку, подобную изображению stickers в папке с домашними заданиями и проверьте ее на валидность. -->
+
+    <link rel="stylesheet" href="Resources/table_style.css">
 </head>
 
 <body>
-
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th id="id_header1">Id=header1</th>
+                    <th id="id_header2">Id=header2</th>
+                    <th id="id_header3">Id=header3</th>
+                </tr>
+            </thead>
+    
+            <tbody>
+                <tr>
+                    <td id="id_col1">Id=col1</td>
+                    <td id="id_col2">Id=col2</td>
+                    <td id="id_col3">Id=col3</td>
+                </tr>
+        </table>
+    </div>
 </body>
 
 </html>
